--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ Flask==3.0.2
 Flask-WTF==1.2.1
 fonttools==4.46.0
 future==0.18.3
+gunicorn==22.0.0
+h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -49,6 +51,7 @@ tenacity==8.3.0
 tzdata==2023.4
 uncertainties==3.1.7
 urllib3==2.1.0
+uvicorn==0.30.1
 Werkzeug==3.0.1
 whitenoise==6.7.0
 WTForms==3.1.2
