--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.2.0
 crispy-bootstrap4==2024.1
 crispy-bootstrap5==2024.2
 cycler==0.12.1
+dj-database-url==2.2.0
 Django==5.0.3
 django-ckeditor==6.7.1
 django-crispy-forms==2.1
@@ -36,6 +37,7 @@ pandas==2.1.4
 Pillow==10.1.0
 pipreqs==0.4.13
 plotly==5.22.0
+psycopg2-binary==2.9.9
 pyparsing==3.1.1
 pyperclip==1.8.2
 pypi==2.1
@@ -48,6 +50,7 @@ six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 tenacity==8.3.0
+typing_extensions==4.12.2
 tzdata==2023.4
 uncertainties==3.1.7
 urllib3==2.1.0
